fix broken stylesheet

--- a/src/global.css
+++ b/src/global.css
@@ -14,7 +14,7 @@
     src: url("/JunicodeVF-Italic.ttf");
 }
 
-/* :root { color-scheme: light dark; } */s
+/* :root { color-scheme: light dark; } */
 
 body {
     font-family: Junicode, "Times New Roman", serif;
